# ALCI

./: pyproject.toml
src/alci/: __init__.py  dataset.py  grid.py  nn.py  tci.py
test/: test_dataset.py  test_grid.py  test_nn.py  test_tci.py
